# course22

./: .gitignore  00-is-it-a-bird-creating-a-model-from-your-own-data.ipynb  _pyproject.toml  main.py  pyproject.toml
